--- a/flexbox.html
+++ b/flexbox.html
@@ -3,8 +3,20 @@
 
 <head>
     <style>
-        .container {
+        /* .container {
+            display: flex;            
+            width: 800px;
+            height: 250px;
+            background-color: #11c5c6;
+            border: 2px solid black;
+            padding: 20px;
+            border-radius: 10px;
+            margin: 0 auto;
+        } */
+
+        .flex-column {
             display: flex;
+            flex-direction: column;
 
             /* Property Lainnya*/
             width: 800px;
@@ -16,16 +28,31 @@
             margin: 0 auto;
         }
 
-        .box {
-            
-            /* property lainnya */
-            background-color: #fbdd1c;
+        .flex-row {
+            display: flex;
+            flex-direction: row;
+            flex-grow: 1;
+
+            /* properti lainnya */
+            padding: 20px;
             margin: 5px;
+            background-color: #FBDD1C;
             border: 2px solid black;
             border-radius: 10px;
         }
 
-        .first {
+        .box {
+            flex-grow: 1;
+
+            /* property lainnya */
+            /* background-color: #fbdd1c; */
+            margin: 5px;
+            border: 2px solid black;
+            border-radius: 10px;
+            background-color: #fe899a;
+        }
+
+        /* .first {
             flex-grow: 1;
         }
 
@@ -34,22 +61,36 @@
         }
 
         .third {
-            flex-grow: 1;
-        }
+            flex-grow: 3;
+        } */
 
-/* flex-grow --> mengisi ruang relatif, tetapkan 1 nilai maka semua ukuran tiap kotak akan sama namun bila masing masing diberi nilai maka ketiga kotak itu akan
+        /* flex-grow --> mengisi ruang relatif, tetapkan 1 nilai maka semua ukuran tiap kotak akan sama namun bila masing masing diberi nilai maka ketiga kotak itu akan
 menyesuaikan ruang kosong yang tersisa didalam container */
-
     </style>
 
 </head>
 
 <body>
-    <div class="container">
+    <!-- <div class="container">
         <div class="box first"></div>
         <div class="box second"></div>
         <div class="box third"></div>
+    </div> -->
+
+    <div class="flex-column">
+        <div class="flex-row">
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+        </div>
+
+        <div class="flex-row">
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+        </div>
     </div>
+
 </body>
 
 </html>
