--- a/kalkulator.html
+++ b/kalkulator.html
@@ -32,6 +32,11 @@
             color: white;
             font-size: 1.5em;
         }
+
+        .double {
+            flex-basis: 50%;
+        }
+
     </style>
 </head>
 
@@ -47,7 +52,7 @@
             <div class="flex-row">
                 <div class="box">5</div>
                 <div class="box">6</div>
-                <div class="box">7</div>
+                <div class="box double">7</div>
             </div>
         </div>
     </div>
