--- a/WebKalkulator.html
+++ b/WebKalkulator.html
@@ -1,11 +1,13 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="assets/style.css">
+    <meta name="viewport" content="width=device-width, initial-sclae=1.0">
     <title>Web Kalkulator</title>
 </head>
 
 <body>
-    <div class="flex-container-column">
+    <div class="flex-container-column card">
         <div class="display">
             <h1 id="displayNumber">0</h1>
         </div>
@@ -30,10 +32,10 @@
         <div class="flex-container-row">
             <div class="button clear">CE</div>
             <div class="button">0</div>
-            <div class="button">3</div>
-            <div class="button equals">=</div>
+            <div class="button equals double">=</div>
         </div>
     </div>
+<script src="assets/kalk.js"></script>
 </body>
 
 </html>
